--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6" id="project-1">
-            <img class="img-fluid" src="img/blank-700x500.jpg" style="opacity: 0;" alt="">
+            <img class="img-fluid" src="img/demo-image-02.jpg" style="opacity: 0;" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
