--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Twelve-Tone Matrix Generator</h4>
-                <p class="mb-0 text-white-50">A Twelve-Tone Matrix calculator, for analysis and composition of music in the style of Twelve-Tone serialism.</p>
+                <p class="mb-0 text-white-50">A Twelve-Tone Matrix calculator, for analysis and composition of music in the style of Twelve-Tone Serialism.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
                 <br /> <br />
                 <a href="matrix.html" class="btn btn-primary js-scroll-trigger">Go</a>
