--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">About</h2>
-          <p class="text-white-50">A current Graduate student at the University of Illinois at Urbana-Champaign with interests in performance and research. [Music - Dance - Biomechanics - Computer Science] </p>
+          <p class="text-white-50">A current Graduate student at the University of Illinois at Urbana-Champaign. </p>
           <h2> <br /> </h2>
         </div>
       </div>
